nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: d-nginx
spec:
  containers:
  - name: nginx
    image: kyos0109/nginx-distroless
    ports:
    - containerPort: 80
