pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hw-pod
  namespace: homework
spec:
  containers:
  - name: web-server
    image: nginx:latest
    ports:
    - containerPort: 8000
    volumeMounts:
    - name: hw-volume
      mountPath: /homework
    lifecycle:
      preStop:
        exec:
          command: ["/bin/sh", "-c", "rm -f /homework/index.html"]
  volumes:
  - name: hw-volume
    emptyDir: {}
