service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw-service
  namespace: homework
spec:
  selector:
    app: homework
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
