ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw-ingress
  namespace: homework
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: homework.otus
    http:
      paths:
      - path: /conf/(.*)
        pathType: Prefix
        backend:
          service:
            name: hw-service
            port:
              number: 80
